--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -25,7 +25,8 @@ xref:reprap#[RepRap], xref:git#[Git]
 |6. |6.11.2018 |xref:slicing#[Slicing]
 |https://github.com/3DprintFIT/B181A-Slicing-Assignment[3]
 
-|7. |13.11.2018 |🚧 xref:scan#[Skenování] |3
+|7. |13.11.2018 |xref:scan#[Skenování]
+|https://github.com/3DprintFIT/B181A-Scanning-Assignment[3]
 
 |8. |20.11.2018 |🚧 xref:printing#[Tisk - Základy] |3
 
